# satcomsim

./: .gitignore  CLIENT.md  README.md  cli.py  main.py  pyproject.toml  requirements.txt  server.py  test_udp.py
satcomsim/models/: orbit.py  planet.py  point.py  point_cart.py  point_pol.py  satellite.py
satcomsim/simulation/: simulation.py
satcomsim/utils/: constants.py  tle_importer.py
src/: Constants.py  MainWindow.py  Monitor.py  Orbit.py  Planet.py  PointCart.py  PointPol.py  Propulsion.py  Satellite.py  SatelliteInfoPanel.py  SatelliteWindow.py  Simulation.py  SimulationDisplay.py
src/NORAD/: TLE_Importer.py
src/assets/: __init__.py
src/models/: orbit.py  planet.py  point_cart.py  point_pol.py  satellite.py
src/simulation/: simulation.py
src/ui/: ConfigureWindow.py  MainWindow.py  SatelliteWindow.py  SimulationDisplay.py  TrackBallCamera.py  configure_window.py  main_window.py  monitor_widget.py  satellite_info_panel.py  satellite_window.py  simulation_display.py  simulation_gl.py
src/utils/: config_manager.py  constants.py  gui_constants.py  tle_importer.py
