[project]
name = "satcomsim"
version = "0.1.1"
description = ""
authors = [{ name = "Ihor Savenko", email = "csigorek@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.0",
    "h11==0.16.0",
    "idna==3.10",
    "jplephem==2.22",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "msgpack==1.1.0",
    "numpy==2.2.5",
    "packaging==25.0",
    "pillow==11.2.1",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "scipy==1.15.3",
    "sgp4==2.24",
    "six==1.17.0",
    "skyfield==1.53",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/veylor-hq/satcomsim"
